# invoice-intelligence-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: .gitkeep  20260710_0001_initial_business_tables.py
app/: __init__.py  main.py
app/api/v1/: __init__.py  dashboard.py  documents.py  exports.py  health.py  invoices.py  mappers.py  router.py  upload.py
app/core/: __init__.py  config.py  exceptions.py  logging.py
app/database/: __init__.py  base.py  session.py
app/middleware/: __init__.py  exception_handler.py
app/models/: __init__.py  document.py  invoice.py  invoice_item.py  processing_log.py  vendor.py
app/prompts/: __init__.py  invoice_extraction.py
app/repositories/: __init__.py  document_repository.py  invoice_repository.py  processing_log_repository.py  stats_repository.py  vendor_repository.py
app/schemas/: __init__.py  base.py  extraction.py  health.py  normalized.py  processing.py  upload.py
app/services/: export_service.py  extraction_service.py  persistence_service.py  pipeline_service.py  storage_service.py  structuring_service.py  upload_service.py
app/services/llm/: __init__.py  base.py  (+2 more)
app/utils/: __init__.py
docs/: architecture.md  cost_analysis.md  design.md  implementation_plan.md  requirements.md  sample_workflow.md
frontend/: api_client.py  app.py  components.py  theme.py
frontend/.streamlit/: config.toml
frontend/views/: __init__.py  dashboard.py  history.py  invoice_details.py  process.py  settings.py
tests/: conftest.py  pdf_builder.py  test_api_offline.py  test_config.py  test_export_service.py  test_extraction_service.py  test_google_vision.py  test_health.py  test_openai_provider.py  test_pdf_extractor.py  test_structuring_service.py  test_upload.py  test_validation_service.py
tests/integration/: __init__.py  conftest.py  fakes.py  test_api_db.py  test_export_api.py  test_openai_live.py  test_pipeline_db.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
(+42 files in other folders)
