[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "invoice-intelligence-engine"
version = "0.1.0"
description = "AI-powered invoice extraction and intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Configuration & settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",

    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",           # Async PostgreSQL driver
    "psycopg2-binary>=2.9.9",    # Sync driver used by Alembic CLI

    # File handling
    "python-multipart>=0.0.9",   # FastAPI file upload support
    "aiofiles>=23.2.1",          # Async file I/O

    # Utilities
    "structlog>=24.1.0",         # Structured logging
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",             # Async HTTP client (testing + future integrations)
    "tenacity>=8.3.0",           # Retry logic
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.4",
    "black>=24.4.2",
    "isort>=5.13.2",
    "pre-commit>=3.7.1",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html -v"
